#2 Began creating DBTableVals, began sorting out API Wrapper

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript{
     }
     dependencies {
         classpath "mysql:mysql-connector-java:8.0.26"
+        classpath "me.sargunvohra.lib:pokekotlin:2.4.0"
     }
 }
 
@@ -18,9 +19,11 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven { url "https://dl.bintray.com/sargunv/maven" }
 }
 dependencies {
-    implementation "mysql:mysql-connector-java:8.0.26"
+    implementation "mysql:mysql-connector-java:8.0.26"rr
+    implementation "me.sargunvohra.lib:pokekotlin:2.4.0"
 }
 
 ext {
